--- a/index.html
+++ b/index.html
@@ -6,14 +6,15 @@
 </head>
 <body>
 <h1>Imane</h1>
-
+<img src="pp.jpeg" alt="profile pic"/>
+<br>
 <em>Don't avoid the problem, push through the problem</em>
 
  <h2>Graphic designer, teacher and becoming a developer </h2>
 
 
-<table>
-     <th>About me</th>
+<table style border black>
+     <tr><th colspan="2">About me</th><br></tr>
     <tr>
         <th>birthday</th>
         <th>08-10</th>
@@ -29,7 +30,8 @@
         <th>
             <ul>
                 <li>falafel</li>
-                <li>pizza</li>
+                <li>potato based dishes</li>
+                <li>fattat hummus</li>
         </ul>
         </th>
     </tr>
@@ -41,28 +43,37 @@
 
 
 <h2>Hobbies</h2>
-<ol>
+<ul>
 
     <li>cooking</li>
-    <li>watching movies</li>
+    <li>watching movies and series and youtube videos</li>
+        <ul>
+            <li>Star wars</li>
+            <li>Maniac</li>
+            <li>All Tim burton movies</li>
+            <li>conspiraci theories</li>
+
+        </ul>
+
     <li>drawing</li>
-</ol>
+</ul>
 
 
 <h2>You can always count on me when<h2>
     <p> When i understand something, i can be quite good at explaining and guiding you through it.</p>
 
-#### A funny story
-I had a meeting and i was quite late. I decided to take the car even though I cannot drive so well. it was night time and as it turns out, the low beam lights of my car were broken. However inside the car the light which indicates if the lights are on or off said the lights where working. I had just gotten out of the parking lot and there was a police car coming. the flickered their blue lights and had to stop. I have zero experience with such situations so i was telling them that i was n a hurry and maybe they could drive with me to where the meeting tok place so i wouldn't be late. the police officer looked at me angrily and asked me to step down the car and give her my ID and drivings license. Suddenly, tere were about four officers around me telling me that the low beam lights weren't working and that i couldn't drive with the car and they were gving me a sermon about how stupid i was and hw dangerous it all was. on top of that, i Only have a provisionary drivings license which means that i am not allowed to drive without the L sign on the back on my car and I also cannot have a passenger with me in the car. Well, guess who did all those things.
+    <h3>A funny story</h3>
+    <p>I had a meeting and i was quite late. I decided to take the car even though I cannot drive so well. it was night time and as it turns out, the low beam lights of my car were broken. However inside the car the light which indicates if the lights are on or off said the lights where working. I had just gotten out of the parking lot and there was a police car coming. the flickered their blue lights and had to stop. I have zero experience with such situations so i was telling them that i was n a hurry and maybe they could drive with me to where the meeting tok place so i wouldn't be late. the police officer looked at me angrily and asked me to step down the car and give her my ID and drivings license. Suddenly, tere were about four officers around me telling me that the low beam lights weren't working and that i couldn't drive with the car and they were gving me a sermon about how stupid i was and hw dangerous it all was. on top of that, i Only have a provisionary drivings license which means that i am not allowed to drive without the L sign on the back on my car and I also cannot have a passenger with me in the car. Well, guess who did all those things.</p>
 
-###### TL;DR
-got a fine for taking the car so i wont be late to the meeting and the meeting was not on that day.
+<h4>Summary</h4>
+    <p>got a fine for taking the car so i wont be late to the meeting and the meeting was not on that day.</p>
 
-At the bottom of the page there should be a next and previous link, this should link to the page of the previous student (alphabetically) and the next one.
-Organise yourself so it is easy to know who you should link to.
+    <br>
+    <footer>
 
-The links should have the following structure:
+        <p> <a href="https://github.com/erick-medina/Markdown-PHPSTORM/blob/master/README.md">previous</a> IMANE <a href="https://github.com/Irina-sku/markdown/blob/master/readme.md">previous</a></p>
 
-<< [next](http://github.com) || IMANE || [next](http://github.com) >>
+
+        </footer>
 </body>
 </html>
